# news-terminal-app

./: .gitignore  Dockerfile  README.md  env_example.txt  main.py  pyproject.toml
config/: __init__.py  prompts.yaml  topics.py
output/: README.md
scripts/: cli_entity_search.py  cli_report_generator.py  cli_topic_search.py  deploy_local.sh
services/: __init__.py  company_cache.py  gemini_service.py  price_service.py  rate_limiter.py  report_service.py  topic_search_service.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_cli_topic_format.py  test_gemini_service_auth.py  test_gemini_structured_parse.py  test_topics.py
