[project]
name = "news-terminal"
version = "0.1.0"
description = "Financial news terminal"
readme = "README.md"
authors = [
    { name = "Aakarsh", email = "aramchandani@ravenpack.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "semhash>=0.3.2",
    "google-genai>=1.0.0",
    "google-auth>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "services/*",
    "config/*",
    "static/*",
    "README.md",
]
